complete signup page ui

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -6,3 +6,8 @@ $linearGradient: linear-gradient(
   hsla(120, 93%, 84%, 1) 0%,
   hsla(185, 90%, 51%, 1) 100%
 );
+$ButtonGradient: linear-gradient(
+  90deg,
+  hsla(185, 90%, 51%, 1) 0%,
+  hsla(120, 93%, 84%, 1) 100%
+);
