--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Anybody:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-@import 'header.scss';
 @import 'colors.scss';
+@import 'header.scss';
+@import 'sign_up.scss';
 
 * {
   margin: 0;
