add functionality to the signup page

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -1,5 +1,7 @@
 $white: #fff;
 $black: #000;
+$red: #e63946;
+$red-200: #fae2e4;
 $gradient: hsla(169, 76%, 48%, 1);
 $linearGradient: linear-gradient(
   90deg,
