create and add the footer components

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -2,6 +2,8 @@ $white: #fff;
 $black: #000;
 $red: #e63946;
 $red-200: #fae2e4;
+$primary: #5a77f8;
+$gray: #a0a1a7;
 $gradient: hsla(169, 76%, 48%, 1);
 $linearGradient: linear-gradient(
   90deg,
