footer theme change

--- a/client/src/styles/footer.scss
+++ b/client/src/styles/footer.scss
@@ -1,9 +1,6 @@
 .footer-main {
   margin-top: 1.5rem;
-
-  border-top: 8px solid $primary;
-  border-left: 1px solid $primary;
-  border-right: 1px solid $primary;
+  border-top: 8px solid $gradient;
   border-bottom: 1px solid $primary;
   border-radius: 10px;
 }
