--- a/client/src/styles/footer.scss
+++ b/client/src/styles/footer.scss
@@ -1,7 +1,7 @@
 .footer-main {
   margin-top: 1.5rem;
   border-top: 8px solid $gradient;
-  border-bottom: 1px solid $primary;
+  border-bottom: 1px solid $gradient;
   border-radius: 10px;
 }
 
