--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -187,6 +187,55 @@ form {
   transform: translateX(0px);
 }
 
+// dropdown menu
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.avatar {
+  img {
+    width: 40px;
+    height: 40px;
+    border: 1px solid $gradient;
+    border-radius: 50%;
+  }
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0px;
+  background-color: #f9f9f9;
+  min-width: 130px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 15px 18px;
+  z-index: 1;
+  border-radius: 10px;
+
+  :nth-child(1) {
+    color: $red;
+  }
+
+  .dropdown-link {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color: $black;
+    font-family: 'Poppins', sans-serif;
+    &:hover {
+      color: $gradient;
+    }
+  }
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+
 // media queries
 
 @media (max-width: 772px) {
