--- a/client/src/styles/footer.scss
+++ b/client/src/styles/footer.scss
@@ -2,6 +2,8 @@
   margin-top: 1.5rem;
   border-top: 8px solid $gradient;
   border-bottom: 1px solid $gradient;
+  border-left: 1px solid $gradient;
+  border-right: 1px solid $gradient;
   border-radius: 10px;
 }
 
