complete update user profile page functionality

--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -3,6 +3,8 @@ $black: #000;
 $dark: #212529;
 $red: #e63946;
 $red-200: #fae2e4;
+$green: #6cbf6c;
+$green-200: #def1de;
 $primary: #5a77f8;
 $gray: #a0a1a7;
 $gradient: hsla(169, 76%, 48%, 1);
