--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -39,7 +39,8 @@ body::-webkit-scrollbar-thumb {
   gap: 10px;
   font-size: 0.8rem;
   font-weight: 500;
-  margin-top: 12px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 300px;
   padding: 15px;
   border-radius: 10px;
@@ -56,7 +57,8 @@ body::-webkit-scrollbar-thumb {
   gap: 10px;
   font-size: 0.8rem;
   font-weight: 500;
-  margin-top: 12px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 300px;
   padding: 15px;
   border-radius: 10px;
