add delete account modal css

--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -54,4 +54,12 @@
   .footer-logo {
     color: $white;
   }
+
+  // modal here...
+  .modal {
+    .modal-content {
+      background-color: $dark;
+      color: $white;
+    }
+  }
 }
