--- a/client/src/styles/dashboard_sidebar.scss
+++ b/client/src/styles/dashboard_sidebar.scss
@@ -19,7 +19,7 @@
       color: $black;
       font-family: 'Poppins', sans-serif;
       &:hover {
-        color: $gradient;
+        color: $gray;
       }
     }
   }
