--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -9,6 +9,7 @@
 @import 'dashboard_sidebar.scss';
 @import 'profile_page.scss';
 @import 'modal.scss';
+@import 'create_post.scss';
 
 * {
   margin: 0;
