--- a/client/src/styles/profile_page.scss
+++ b/client/src/styles/profile_page.scss
@@ -36,9 +36,39 @@
 
   .profile_update_btn {
     width: 50vw;
-    padding: 15px;
+    padding: 12px;
     border-radius: 10px;
-    margin-top: 2rem;
+    margin-top: 1rem;
+    background: $white;
+    color: $black;
+    border: 1px solid $gradient;
+    cursor: pointer;
+    transition: background-color 0.5s ease-in-out 0.5s;
+
+    &:hover {
+      color: $white;
+      background: $ButtonGradient;
+    }
+  }
+
+  //loading button
+  .loading-btn {
+    width: 50vw;
+    padding: 12px;
+    border-radius: 10px;
+    margin-top: 1rem;
+    background: $ButtonRed;
+    color: $white;
+    border: 1px solid $gradient;
+    cursor: not-allowed;
+    transition: background-color 0.5s ease-in-out 0.5s;
+  }
+
+  // admin design styles
+  .Admin_create_btn {
+    width: 50vw;
+    padding: 12px;
+    border-radius: 10px;
     background: $white;
     color: $black;
     border: 1px solid $gradient;
