--- a/client/src/styles/create_post.scss
+++ b/client/src/styles/create_post.scss
@@ -91,12 +91,27 @@
       border: 1px solid #00cec9;
     }
 
-    button {
+    .post_upload_btn {
       padding: 8px;
       border-radius: 5px;
       background-color: transparent;
       border: 1px solid $gradient;
       cursor: pointer;
+    }
+
+    //loading button
+    .loading-btn {
+      padding: 8px;
+      border-radius: 5px;
+      background-color: transparent;
+      border: 1px solid $gradient;
+      cursor: not-allowed;
+    }
+    // progress bar
+    .loading-progress {
+      width: 50px;
+      height: 50px;
+      border-radius: 5px;
     }
   }
 
@@ -109,6 +124,13 @@
   .ql-editor {
     font-size: 1.05rem;
   }
+}
+
+// upload image css
+.upload-image {
+  width: 100%;
+  height: 18rem;
+  object-fit: cover;
 }
 
 .create_post_btn {
