add posts section to the dashboard

--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -91,6 +91,8 @@
   }
 
   // react quill...
-  .ql-editor .ql-blank {
-  }
+  // TODO: change color of placeholder
+  // div.ql-editor .ql-blank ::placeholder {
+  //   color: $white;
+  // }
 }
