--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -95,4 +95,9 @@
   // div.ql-editor .ql-blank ::placeholder {
   //   color: $white;
   // }
+
+  // dashboard post ...
+  .td-link {
+    color: $white;
+  }
 }
