--- a/client/src/styles/dashposts.scss
+++ b/client/src/styles/dashposts.scss
@@ -1,20 +1,99 @@
 .dash_post_container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  flex-direction: column;
-  margin-left: 10rem;
   font-family: 'Poppins', sans-serif;
+  margin-top: 10px;
+  margin-left: 1rem;
+  width: 100%;
+  height: 100vh;
+  overflow-x: scroll;
+
+  .table-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+    margin-bottom: 10px;
+    padding: 10px;
+    height: 60px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    border-radius: 5px;
+  }
+
+  .td-content {
+    text-align: center;
+  }
+
+  .dash_post_delete_btn {
+    background-color: $red;
+    color: $white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    &:hover {
+      background-color: $red-200;
+    }
+  }
+  .dash_post_edit_btn {
+    background-color: $green;
+    color: $white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    &:hover {
+      background-color: $green-200;
+    }
+  }
+}
+
+.td-link {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  color: $black;
+  font-family: 'Poppins', sans-serif;
+  &:hover {
+    color: $gradient;
+  }
+}
+// image css ...
+.dash_post_image {
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
 }
 
 // media queries
 @media (max-width: 545px) {
   .dash_post_container {
-    margin-top: 2rem;
     display: flex;
     margin-left: 0rem;
     flex-direction: column;
+    gap: 5px;
+    height: 100vh;
     justify-content: center;
     align-items: center;
+    font-size: 10px;
+
+    .table-row {
+      align-items: center;
+      gap: 12px;
+      margin-bottom: 10px;
+      padding: 10px;
+    }
+  }
+
+  // image css ...
+  .dash_post_image {
+    width: 3rem;
+    height: 2rem;
+    object-fit: cover;
+  }
+
+  .dash_post_edit_btn {
+    font-size: 10px;
   }
 }
