--- a/client/src/styles/profile_page.scss
+++ b/client/src/styles/profile_page.scss
@@ -4,6 +4,7 @@
   align-items: center;
   flex-direction: column;
   margin-left: 10rem;
+  margin-top: 50px;
   font-family: 'Poppins', sans-serif;
 
   h1 {
