--- a/client/src/styles/dashposts.scss
+++ b/client/src/styles/dashposts.scss
@@ -1,5 +1,6 @@
 .dash_post_container {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   font-family: 'Poppins', sans-serif;
@@ -8,6 +9,7 @@
   width: 100%;
   height: 100vh;
   overflow-x: scroll;
+  overflow-x: hidden;
 
   .table-row {
     display: flex;
@@ -16,9 +18,16 @@
     gap: 60px;
     margin-bottom: 10px;
     padding: 10px;
-    height: 60px;
+    height: 50px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     border-radius: 5px;
+    transition: background-color 0.2s ease-in-out;
+
+    &:hover {
+      background-color: $gray;
+      color: $black;
+      cursor: pointer;
+    }
   }
 
   .td-content {
@@ -61,9 +70,23 @@
 }
 // image css ...
 .dash_post_image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 3rem;
   height: 3rem;
   object-fit: cover;
+}
+
+// show more button
+.dash_post_show_more_btn {
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(20 184 166);
+  cursor: pointer;
 }
 
 // media queries
@@ -77,9 +100,11 @@
     justify-content: center;
     align-items: center;
     font-size: 10px;
+    overflow-x: scroll;
 
     .table-row {
       align-items: center;
+      margin-left: 6rem;
       gap: 12px;
       margin-bottom: 10px;
       padding: 10px;
