--- a/client/src/styles/dashposts.scss
+++ b/client/src/styles/dashposts.scss
@@ -5,11 +5,9 @@
   align-items: center;
   font-family: 'Poppins', sans-serif;
   margin-top: 10px;
-  margin-left: 1rem;
+  margin-left: 5rem;
   width: 100%;
   height: 100vh;
-  overflow-x: scroll;
-  overflow-x: hidden;
 
   .table-row {
     display: flex;
@@ -17,6 +15,7 @@
     align-items: center;
     gap: 60px;
     margin-bottom: 10px;
+    width: 100%;
     padding: 10px;
     height: 50px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -103,7 +102,6 @@
 
     .table-row {
       align-items: center;
-      margin-left: 6rem;
       gap: 12px;
       margin-bottom: 10px;
       padding: 10px;
@@ -119,5 +117,38 @@
 
   .dash_post_edit_btn {
     font-size: 10px;
+  }
+}
+
+@media (max-width: 1080px) {
+  .dash_post_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 10px;
+    margin-left: 1rem;
+    width: 100%;
+    height: 100vh;
+    overflow-x: scroll;
+
+    .table-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 60px;
+      margin-bottom: 10px;
+      padding: 10px;
+      height: 50px;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+      border-radius: 5px;
+      transition: background-color 0.2s ease-in-out;
+
+      &:hover {
+        background-color: $gray;
+        color: $black;
+      }
+    }
   }
 }
