add call to action to the post page

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -13,6 +13,7 @@
 @import 'dashposts.scss';
 @import 'dashuser.scss';
 @import 'post_page.scss';
+@import 'call_to_action.scss';
 
 * {
   margin: 0;
