--- a/client/src/styles/post_page.scss
+++ b/client/src/styles/post_page.scss
@@ -95,6 +95,13 @@
   }
 }
 
+// call to Action...
+.action_container {
+  max-width: 56rem;
+  margin: 0 auto;
+  width: 100%;
+}
+
 // loading spinner
 .spinner-container {
   display: flex;
