--- a/client/src/styles/comment.scss
+++ b/client/src/styles/comment.scss
@@ -321,3 +321,16 @@
     text-decoration: none;
   }
 }
+
+.comment-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
