add recent articles section to the post page

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -15,6 +15,7 @@
 @import 'post_page.scss';
 @import 'call_to_action.scss';
 @import 'comment.scss';
+@import 'post_card.scss';
 
 * {
   margin: 0;
