add comments section to the admin dashboard

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -16,6 +16,7 @@
 @import 'call_to_action.scss';
 @import 'comment.scss';
 @import 'post_card.scss';
+@import 'dash_comment.scss';
 
 * {
   margin: 0;
