--- a/client/src/styles/dash_comment.scss
+++ b/client/src/styles/dash_comment.scss
@@ -10,6 +10,25 @@
   height: 100vh;
   font-size: 14px;
 
+  .main-table {
+    .table-row-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-family: 'Poppins', sans-serif;
+      gap: 60px;
+      margin-bottom: 10px;
+      width: 100%;
+      padding: 10px;
+      height: 42px;
+      background-color: $gray;
+      color: $black;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+      border-radius: 5px;
+      transition: background-color 0.2s ease-in-out;
+    }
+  }
+
   .table-row {
     display: flex;
     justify-content: space-between;
@@ -20,6 +39,7 @@
     width: 100%;
     padding: 10px;
     height: 42px;
+
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     border-radius: 5px;
     transition: background-color 0.2s ease-in-out;
@@ -126,7 +146,6 @@
     width: 100%;
     margin-top: 10px;
     margin-right: 1rem;
-
     height: 100vh;
     overflow-x: scroll;
 
