--- a/client/src/styles/dashuser.scss
+++ b/client/src/styles/dashuser.scss
@@ -9,6 +9,25 @@
   width: 100%;
   height: 100vh;
 
+  .main-table {
+    .table-row-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-family: 'Poppins', sans-serif;
+      gap: 60px;
+      margin-bottom: 10px;
+      width: 100%;
+      padding: 10px;
+      height: 42px;
+      background-color: $gray;
+      color: $black;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+      border-radius: 5px;
+      transition: background-color 0.2s ease-in-out;
+    }
+  }
+
   .table-row {
     display: flex;
     justify-content: space-between;
