--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -17,6 +17,7 @@
 @import 'comment.scss';
 @import 'post_card.scss';
 @import 'dash_comment.scss';
+@import 'dashboard_main.scss';
 
 * {
   margin: 0;
