--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -71,8 +71,11 @@
         color: $white;
 
         &:hover {
-          color: $black;
+          color: $red;
         }
+      }
+      .sidebar-elem {
+        background-color: rgb(51 65 85);
       }
     }
   }
@@ -125,5 +128,18 @@
     .PostCard_link {
       color: $white;
     }
+  }
+
+  // dashboard main
+  .dash_container {
+    background-color: rgb(51 65 85);
+  }
+  .dash-recent-user {
+    background-color: rgb(51 65 85);
+  }
+
+  .dash-trow {
+    background-color: rgb(31 41 55);
+    border: 1px solid rgb(55 65 81);
   }
 }
