complete the home page

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -18,6 +18,7 @@
 @import 'post_card.scss';
 @import 'dash_comment.scss';
 @import 'dashboard_main.scss';
+@import 'home.scss';
 
 * {
   margin: 0;
