--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -142,4 +142,11 @@
     background-color: rgb(31 41 55);
     border: 1px solid rgb(55 65 81);
   }
+
+  // call to action on home page
+  .CallTOAction-home {
+    padding: 0.75rem;
+    background-color: #334155;
+    margin-bottom: 10px;
+  }
 }
