--- a/client/src/styles/call_to_action.scss
+++ b/client/src/styles/call_to_action.scss
@@ -36,6 +36,11 @@
     display: flex;
     flex: 1;
     padding: 1.7rem;
+    img {
+      width: 100%;
+      height: 50%;
+      border-radius: 10px;
+    }
   }
 
   .action_btn {
@@ -79,7 +84,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 80%;
       padding: 1rem;
     }
   }
