complete about and projects pages

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -20,6 +20,8 @@
 @import 'dashboard_main.scss';
 @import 'home.scss';
 @import 'search.scss';
+@import 'projects.scss';
+@import 'about.scss';
 
 * {
   margin: 0;
