some bug fixes in about and header

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -257,20 +257,7 @@ form {
   }
   form {
     .header-input {
-      width: 120px;
-      position: absolute;
-      text-align: center;
-      padding: 8px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      left: 100px;
-      top: 21px;
-
-      font-family: 'Poppins', sans-serif;
-
-      &:focus {
-        outline: 1px solid $gradient;
-      }
+     display: none;
     }
   }
 
